# CFEAR_Radarodometry_code_public

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/cfear_radarodometry/: cfar.h  eval_trajectory.h  intensity_utils.h  n_scan_normal.h  odometrykeyframefuser.h  pointnormal.h  radar_driver.h  radar_filters.h  registration.h  serialization.h  statistics.h  types.h  utils.h  voxelgrid.h
launch/: boreas_demo  filter.launch  kvarntorp_demo  odom.launch  oxford_demo  params.launch  vis.launch
launch/Mulran/: mulran_odom.launch  run_sequence_Mulran  run_sequence_Mulran_save_odom
launch/kvarntorp/: kvarntorp_odom.launch  run_sequence_kvarntorp
launch/orkla/: run_sequence_orkla
launch/oxford/: oxford_odom.launch  run_sequence  run_sequence_save_odom
launch/oxford/eval/: 10_baseline_p2d_eval  1_baseline_eval  2_weight_intensity_eval  3_residual_weight_eval  4_filter_eval  5_resolution  6_submap_keyframes  7_motion_compensation  8_grid_search  8_loss_function  9_loss_function  execute_sequence  intensity_eval  main_eval  merge_eval.py  multi_eval  pars  start_workers  worker
launch/oxford/eval/params/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  oxford_cfear-1  oxford_cfear-2  oxford_cfear-2-d2d  oxford_cfear-3  oxford_cfear-3-loss
launch/oxford/eval/params/baseline/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  mulran_cfear-3-p2l  mulran_cfear-3-s10  oxford_cfear-1  oxford_cfear-2  oxford_cfear-3  oxford_cfear-3-p2l  oxford_cfear-3-s10
launch/oxford/eval/params/baseline_p2d/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  mulran_cfear-3-p2l  mulran_cfear-3-s10  oxford_cfear-1  oxford_cfear-2  oxford_cfear-3  oxford_cfear-3-p2d  oxford_cfear-3-p2d-s10  oxford_cfear-3-s10
launch/oxford/eval/params/final/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  mulran_cfear-3-p2l  oxford_cfear-1  oxford_cfear-2  oxford_cfear-3  oxford_cfear-3-p2l
launch/oxford/eval/params/grid_search/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  mulran_cfear-3-p2l  oxford_cfear-1  oxford_cfear-2  oxford_cfear-3  oxford_cfear-3-p2l
launch/oxford/eval/params/kstrong_vs_cfar/: oxford-cfear-3-ca-cfar  oxford-cfear-3-kstrong
launch/oxford/eval/params/loss_function/: loss_function_cfear-3
launch/oxford/eval/params/motion_compensation/: motion_compensation_cfear-3
launch/oxford/eval/params/resolution/: oxford_cfear-3
launch/oxford/eval/params/submap_keyframes/: mulran_keyframe_cfear-3  submap_keyframe_cfear-3
launch/oxford/eval/params/weight/: mulran_cfear-2  mulran_cfear-3  oxford_cfear-1
launch/oxford/eval/params/weight_intensity/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  mulran_cfear-3-p2l  oxford_cfear-1  oxford_cfear-2  oxford_cfear-3  oxford_cfear-3-p2l
launch/oxford/eval/params/weight_residual/: mulran_cfear-1  mulran_cfear-2  mulran_cfear-3  mulran_cfear-3-p2l  oxford_cfear-1  oxford_cfear-2  oxford_cfear-3  oxford_cfear-3-p2l
launch/oxford/eval/utils/: execute_sequence  start_workers  worker
launch/volvo/: run_sequence_volvoce
launch/volvo_CE/: run_sequence_volvoce  volvo_odom.launch
rviz/: kvarntorp.rviz  odom.rviz
src/: cfear_radarodometry_node.cpp  eval_node.cpp  offline_odometry.cpp  radar_filter_node.cpp  registration_srv_node.cpp
src/cfear_radarodometry/: cfar.cpp  eval_trajectory.cpp  intensity_utils.cpp  n_scan_normal.cpp  odometrykeyframefuser.cpp  pointnormal.cpp  radar_driver.cpp  radar_filters.cpp  registration.cpp  statistics.cpp  types.cpp  utils.cpp
src/cfear_radarodometry/other/: voxelgrid.cpp
