<?xml version="1.0"?>
<package format="2">
  <name>cfear_radarodometry</name>
  <version>0.0.0</version>
  <description>CFEAR - Conservative Filtering for Efficient and Accurate Radarodometry</description>

  <maintainer email="dla.adolfsson@gmail.com">daniel</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>pcl_ros</build_depend>
<build_depend>rospy</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>graph_map</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>laser_geometry</build_depend>
<build_depend>tf_conversions</build_depend>
<build_depend>tf</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>eigen_conversions</build_depend>
<build_depend>cv_bridge</build_depend>
<build_depend>image_transport</build_depend>
<build_depend>ndt_map</build_depend>



<exec_depend>catkin</exec_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>pcl_ros</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>laser_geometry</exec_depend>
<exec_depend>tf_conversions</exec_depend>
<exec_depend>tf</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>eigen_conversions</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>image_transport</exec_depend>
<exec_depend>ndt_map</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
